<resources>
    <string name="app_name">WhatsApp Cleaner</string>
    <string name="title_activity_tab1">Tab1Activity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="no_ads">Sorry For Ads,  but as a student it will fulfill my daily Bread Butter needs.</string>
    <string name="delete_items_blank">Delete Selected Items (0B)</string>
    <string name="_0b">0B</string>
    <string name="files">Files</string>
    <string name="no_files">no files</string>
    <string name="recents">Recents</string>
    <string name="logo">logo</string>
    <string name="privacy">Privacy Policy</string>
    <string name="about_dev">About The Developer</string>
    <string name="feedback">FeedBack</string>
    <string name="whatsapp_cleaner">Files cleaner</string>
    <string name="rate_us">RATE US</string>
    <string name="remind">REMIND ME LATER</string>
    <string name="thanks">NO THANKS</string>
    <string name="desp">If you enjoy using whats-App cleaner, please take a moment to rate it. Thanks for your support!</string>
    <string name="select_all">Select All</string>
    <string name="date">Date</string>
    <string name="name">Name</string>
    <string name="size">Size</string>
    <string name="logo_designer">Logo Designer</string>
    <string name="download_selected_items_0b">Download Selected Items (0B)</string>
    <string name="share_delete">Share or Delete Selected Files (0B)</string>


    <string name="about">About</string>
    <string name="send_feedback_to_developer">Send feedback to developer</string>
    <string name="view_source_code_at_github">View source code at GitHub</string>
    <string name="links">Links</string>
    <string name="reset_settings">Reset Settings</string>
    <string name="thanks_to">Thanks To:</string>


    <string name="close">Close</string>
    <string name="open">Open</string>
</resources>
