<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".AboutFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/aboutSampleIconImageView"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginBottom="8dp"
            android:background="@color/aboutPageAccentColor"
            android:contentDescription="About Screen Info Logo"
            android:foregroundGravity="center"
            android:src="@drawable/ic_info"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="HardcodedText" />

        <ImageView
            android:id="@+id/aboutPageAppLogo"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="?attr/actionBarSize"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/app_name"
            android:scaleType="fitXY"
            android:src="@drawable/applogo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/aboutSampleIconImageView" />

        <TextView
            android:id="@+id/aboutSampleAppNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginTop="24dp"
            android:fontFamily="casual"
            android:text="@string/app_name"
            android:textColor="@color/aboutPageAccentColor"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/aboutPageAppLogo" />

        <TextView
            android:id="@+id/aboutSampleVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textColor="@color/aboutPageAccentColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/aboutSampleAppNameTextView" />

        <View
            android:id="@+id/aboutSampleSpacerView"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="8dp"
            android:background="@color/aboutPageSpacerColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/aboutSampleVersion" />

        <TextView
            android:id="@+id/aboutPageLinksTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_margin="16dp"
            android:text="@string/links"
            android:textColor="@color/aboutPageAccentColor"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/aboutSampleSpacerView" />

        <TextView
            android:id="@+id/aboutPageFeedbackTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:padding="16dp"
            android:text="@string/send_feedback_to_developer"
            android:textColor="@android:color/background_dark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/aboutPageLinksTextView" />

        <TextView
            android:id="@+id/aboutPageViewSourceCodeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:padding="16dp"
            android:text="@string/view_source_code_at_github"
            android:textColor="@android:color/background_dark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/aboutPageFeedbackTextView" />

        <TextView
            android:id="@+id/aboutPageAboutDeveloperTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:padding="16dp"
            android:text="@string/about_dev"
            android:textColor="@android:color/background_dark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/aboutPageViewSourceCodeTextView" />

        <TextView
            android:id="@+id/aboutPagePrivacyPolicyTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:padding="16dp"
            android:text="@string/privacy"
            android:textColor="@android:color/background_dark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/aboutPageAboutDeveloperTextView" />

        <TextView
            android:id="@+id/aboutPageCreditsTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_margin="16dp"
            android:text="@string/thanks_to"
            android:textColor="@color/aboutPageAccentColor"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/aboutPagePrivacyPolicyTextView" />

        <TextView
            android:id="@+id/aboutPageCreditLogoDesignerTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:background="?attr/selectableItemBackground"
            android:padding="16dp"
            android:text="Vijeta Dash - Logo Designer"
            android:textColor="@android:color/background_dark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/aboutPageCreditsTextView"
            tools:ignore="HardcodedText" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>