<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="83dp"
        android:layout_marginBottom="54dp"
        android:background="@color/white"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="3"
        tools:listitem="@layout/image_content" />

    <ImageView
        android:id="@+id/nofiles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/no_files"
        android:gravity="center"
        android:visibility="gone" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="325dp"
            android:layout_height="53dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="10dp"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-7255339257613393/5143250272"
            ads:layout_constraintEnd_toEndOf="parent"
            ads:layout_constraintHorizontal_bias="0.555"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_gravity="center"
            android:layout_marginTop="83dp"
            android:background="@color/gray"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--<Switch-->
        <!--android:id="@+id/switch1"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginStart="5dp"-->
        <!--android:layout_marginTop="55dp"-->
        <!--android:layout_marginBottom="5dp"-->
        <!--android:checked="true"-->
        <!--android:fontFamily="sans-serif-light"-->
        <!--android:text="@string/recents"-->
        <!--android:textAllCaps="false"-->
        <!--android:textColor="@color/lblack"-->
        <!--android:textSize="15sp"-->
        <!--android:theme="@style/styleSwitch"-->
        <!--app:layout_constraintLeft_toLeftOf="parent"-->
        <!--app:layout_constraintStart_toStartOf="@+id/ads_not_loaded"-->
        <!--app:layout_constraintTop_toTopOf="parent" />-->


        <TextView
            android:id="@+id/select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="2dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/select_all"
            android:textAllCaps="false"
            android:textColor="@color/lblack"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@+id/view2"
            app:layout_constraintEnd_toStartOf="@+id/selectall"
            app:layout_constraintTop_toTopOf="@+id/view" />

        <CheckBox
            android:id="@+id/selectall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:button="@drawable/check_box_1"
            android:textSize="15sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/select"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/adView" />

        <Button
            android:id="@+id/delete"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/button_shape"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:text="@string/download_selected_items_0b"
            android:textAllCaps="false"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_gravity="center"
            android:layout_marginBottom="56dp"
            android:background="@color/gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/ads_not_loaded"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:singleLine="false"
            android:textAllCaps="false"
            android:textColor="@android:color/darker_gray"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_gravity="center"
            android:layout_marginTop="55dp"
            android:background="@color/gray"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="@+id/ads_not_loaded"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/date"
            android:layout_width="61dp"
            android:layout_height="21dp"
            android:background="@drawable/button_sort"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:singleLine="false"
            android:text="@string/date"
            android:textAllCaps="false"
            android:textColor="#C103A9F4"
            android:textSize="15sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/select"
            app:layout_constraintStart_toStartOf="@+id/ads_not_loaded"
            app:layout_constraintTop_toBottomOf="@+id/adView" />

        <Button
            android:id="@+id/name"
            android:layout_width="61dp"
            android:layout_height="21dp"
            android:layout_marginStart="61dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/button_sort"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:singleLine="false"
            android:text="@string/name"
            android:textAllCaps="false"
            android:textSize="15sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/date"
            app:layout_constraintStart_toStartOf="@+id/date"
            app:layout_constraintTop_toBottomOf="@+id/adView" />

        <Button
            android:id="@+id/size"
            android:layout_width="61dp"
            android:layout_height="21dp"
            android:layout_marginStart="61dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_sort"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:singleLine="false"
            android:text="@string/size"
            android:textAllCaps="false"
            android:textSize="15sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/name"
            app:layout_constraintStart_toStartOf="@+id/name"
            app:layout_constraintTop_toBottomOf="@+id/adView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>